--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>Poke-Chat</title>
+        <link rel="shortcut icon" href="#">
     </head>
     <body>
         <div id="content"></div>
