--- a/scripts/App.css
+++ b/scripts/App.css
@@ -2,12 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .navigation {
+    display: grid;
     height: 60px;
     width: 100%;
-    background-color: green;
+    background-color: rgb(12, 10, 18);
+    color: rgb(200, 200, 200);
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    border-bottom: 1px solid rgb(30, 30, 40);
 }
 
 .wallpaper {
@@ -24,60 +32,65 @@
 }
 
 .side-bar {
-    background-color: lime;
+    background-color: rgb(12, 10, 18);
     width: 300px;
+    border-right: 1px solid rgb(30, 30, 40);
 }
 
 .chat-container {
-    border-radius: 10px;
     display: grid;
     grid-gap: 25px;
     position: relative;
-    background-color: red;
+    background-color: rgb(12, 10, 18);
     width: 1200px;
     padding: 40px;
     margin: auto;
     right: 200px;
     height: 800px;
+    border: 1px solid rgb(30, 30, 40);
 }
 
 .chat-history-container {
     min-height: 500px;
     width: 100%;
-    background-color: red;
+    background-color:  rgb(6, 8, 12);
     overflow-y: scroll;
     padding-right: 20px;
+    border: 1px solid rgb(30, 30, 40);
 }
 
 .chat-history {
     padding: 40px;
-    background-color: white;
-    display: flex;
+    background-color: rgb(6, 8, 12);
+    display: grid;
     flex-direction: column;
     grid-gap: 10px;
     min-height: 100%;
 }
 
 .submit-form {
-    background-color: orange;
-    border-radius: 10px;
+    background-color: rgb(6, 8, 12);
     height: 100px;
 }
 
 .bot {
-    display: inline-block;
-    background-color: crimson;
+    background-color: rgb(80, 30, 40);
     font-size: 1.5rem;
     padding: 10px;
-    border-radius: 10px;
     word-wrap: break-word;
+    color: white;
+    border: 1px solid rgb(30, 30, 40);
+}
+
+.user-name {
+    color: white;
 }
 
 .user {
-    display: inline-block;
-    background-color: pink;
+    color: white;
+    background-color: rgb(30, 30, 40);
     font-size: 1.5rem;
     padding: 10px;
-    border-radius: 10px;
     word-wrap: break-word;
+    border: 1px solid rgb(30, 30, 40);
 }
