--- a/scripts/App.css
+++ b/scripts/App.css
@@ -82,10 +82,26 @@
     border: 1px solid rgb(30, 30, 40);
 }
 
-.user-name {
+.profile-container {
+    background-color: red;
+    width: 15%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: left;
+}
+
+.profile-picture {
+    display: inline-block;
+    width: 50px;
+}
+
+.y {
     color: white;
 }
 
+.n {
+    color: grey;
+}
 .user {
     color: white;
     background-color: rgb(30, 30, 40);
