finished styling / fixed errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Poke-Chat</title>
         <link rel="shortcut icon" href="#">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="content"></div>
