--- a/scripts/App.css
+++ b/scripts/App.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     overflow: hidden;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .navigation {
@@ -16,6 +17,12 @@
     justify-content: center;
     font-size: 24px;
     border-bottom: 1px solid rgb(30, 30, 40);
+}
+
+.title {
+    border-top: 1px solid rgb(200, 200, 200);
+    border-bottom: 1px solid rgb(200, 200, 200);
+    font-size: 1.5rem;
 }
 
 .wallpaper {
@@ -35,6 +42,18 @@
     background-color: rgb(12, 10, 18);
     width: 300px;
     border-right: 1px solid rgb(30, 30, 40);
+    color: rgb(100, 100, 115);
+    padding: 25px;
+}
+
+.rule-title {
+    text-align: center;
+    border-bottom: 1px solid rgb(100, 100, 115);
+    margin-bottom: 10px;
+}
+
+.side-rules {
+    font-size: .8rem;
 }
 
 .chat-container {
@@ -48,6 +67,8 @@
     right: 200px;
     height: 800px;
     border: 1px solid rgb(30, 30, 40);
+    box-shadow: 0 0 40px black;
+    border-radius: 10px;
 }
 
 .chat-history-container {
@@ -57,6 +78,7 @@
     overflow-y: scroll;
     padding-right: 20px;
     border: 1px solid rgb(30, 30, 40);
+    border-radius: 10px;
 }
 
 .chat-history {
@@ -69,46 +91,103 @@
 }
 
 .submit-form {
+    position: relative;
     background-color: rgb(6, 8, 12);
     height: 100px;
+    border: 1px solid rgb(30, 30, 40);
+    border-radius: 10px;
+}
+
+.input-form {
+    background-color:rgb(6, 8, 12);
+    border: none;
+    width: 90%;
+    height: 100%;
+    text-align: center;
+    color: white;
+}
+
+.submit-button {
+    position: absolute;
+    height: 100%;
+    width: 10%;
+    font-size: 2rem;
+    background-color:  rgb(30, 30, 40);
+    border: none;
+}
+
+.submit-button:hover {
+    position: absolute;
+    height: 100%;
+    width: 10%;
+    font-size: 2.1rem;
 }
 
 .bot {
     background-color: rgb(80, 30, 40);
-    font-size: 1.5rem;
+    font-size: .85rem;
     padding: 10px;
     word-wrap: break-word;
     color: white;
     border: 1px solid rgb(30, 30, 40);
+    border-radius: 10px;
+}
+
+.message-container {
+    border: 1px solid rgb(40, 40, 50);
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .profile-container {
-    background-color: red;
-    width: 15%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    display: flex;
+    grid-gap: 10px;
     text-align: left;
+    align-items: center;
+    margin: 10px;
 }
 
 .profile-picture {
     display: inline-block;
     width: 50px;
+    border-radius: 50%;
+    background-color: white;
 }
 
 .y {
-    background-color: green;
     color: white;
+    font-size: 1rem;
+    border-top: 1px solid rgb(0, 120, 135);
+    border-bottom: 1px solid rgb(0, 50, 60);
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .n {
-    background-color: orange;
     color: grey;
 }
 .user {
     color: white;
-    background-color: rgb(30, 30, 40);
-    font-size: 1.5rem;
+    border: 1px solid rgb(40, 40, 50);
+    border-radius: 10px;
+    font-size: .85rem;
     padding: 10px;
     word-wrap: break-word;
-    border: 1px solid rgb(30, 30, 40);
+}
+
+a {
+    color: green;
+}
+
+.goldenrod {
+    color: goldenrod;
+}
+
+.blue-shade {
+    color: rgb(0, 120, 135);
+}
+
+.size-reset {
+    width: 400px;
 }
